# Routes/Router/fireRoute.js
@@ -4,6 +4,6 @@ const router = express.Router();
 const FireQuestion = require("../../Controller/fireController");
 
 router.post("/create", FireQuestion.Create);
-router.get('/calculate/:userId', FireQuestion.Calculate);
+router.get('/calculate/:fireId', FireQuestion.Calculate);
 
 module.exports = router;
